# shamash

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
ArgosCI/: config.json
licenses/: nabu-license  time-license
src/: config.rs  log.rs  main.rs  network_adapter.rs  no_internet.rs  utils.rs
src/network_adapter/: mod.rs
src/states/: complete_network_outage.rs  diagnosing.rs  isp_outage.rs  local_outage.rs  mod.rs  online.rs
