[package]
name = "shamash"
version = "1.4.1"
edition = "2024"
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hades = { git = "https://github.com/Xqhare/hades" }
horae = { git = "https://github.com/Xqhare/horae" }
mawu = { git = "https://github.com/Xqhare/mawu" }

[profile.release]
lto = true

[lints.clippy]
# Enable pedantic lints - use this manually once in a while, but don't enable by default
# pedantic = { level = "warn", priority = -1 }
